refactored index.html so it was more readable; tried to add the button for the jubilee dinner event using copy code of the Valborg navbar button. Refactored some of the CSS files. Duplicated the Donations page to turn it into the Jubilee Dinner page; ran into an issue with the navbar buttons having ideas and data ref numbers, so I couldnt create and style them properly.

--- a/css/master_main.css
+++ b/css/master_main.css
@@ -1,1 +1,27 @@
-#u117-5{background-color:transparent;text-align:right;font-family:gudea, sans-serif;font-weight:400;}#u117{color:#FF0000;}#u362,#u332,#u358,#u808,#u2295,#u2724{border-style:solid;border-width:1px;border-color:#E4E4E4;background-color:#F5F4F4;}#u361-4,#u336-4,#u357-4,#u807-4,#u2298-4,#u2727-4{background-color:transparent;text-align:center;color:#7F7F7F;font-family:open-sans, sans-serif;font-weight:600;}#u113{border-width:0px;border-color:transparent;background-color:#E5EDF8;}#u174,#u93{background-color:transparent;}#u114{border-width:0px;border-color:transparent;background-color:#F1C725;}
+#u117-5{background-color:transparent;
+        text-align:right;
+        font-family:gudea, sans-serif;
+        font-weight:400;}
+
+#u117{color:#FF0000;}
+
+#u362,#u332,#u358,#u808,#u2295,#u2724{border-style:solid;
+                                      border-width:1px;
+                                      border-color:#E4E4E4;
+                                      background-color:#F5F4F4;}
+
+#u361-4,#u336-4,#u357-4,#u807-4,#u2298-4,#u2727-4{background-color:transparent;
+                                                  text-align:center;
+                                                  color:#7F7F7F;
+                                                  font-family:open-sans, sans-serif;
+                                                  font-weight:600;}
+
+#u113{border-width:0px;
+      border-color:transparent;
+      background-color:#E5EDF8;}
+
+#u174,#u93{background-color:transparent;}
+
+#u114{border-width:0px;
+      border-color:transparent;
+      background-color:#F1C725;}
